2004-01-21  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-factory.c (nautilus_icon_factory_get_icon_for_file):
	Don't allow small svgs as themselves.

2004-01-20  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-connect-server-dialog.c:
	(nautilus_connect_server_dialog_init):
	Nicer labels
	
	* src/nautilus-shell-ui.xml:
	ellipsis on backgrounds and emblems

2004-01-20  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-program-chooser.c:
	(nautilus_program_chooser_instance_init):
	Choose -> OK
	* libnautilus-private/nautilus-program-choosing.c:
	(dialog_response), (choose_application_callback):
	Make open with other app dialog non-modal.
	
	* src/file-manager/fm-directory-view.c:
	(reset_bonobo_open_with_menu), (real_merge_menus),
	(can_use_component_for_file):
	* src/file-manager/nautilus-directory-view-ui.xml:
	Remove open with views from menu

2004-01-19  Alexander Larsson  <alexl@redhat.com>

	* docs/Makefile.am (EXTRA_DIST):
	Add nautilus-context-menus.txt.

2004-01-18  Jason Leach  <leach@wam.umd.edu>

	* libnautilus-private/Makefile.am (install-data-local): builddir
	!= srcdir fix.

2004-01-18  Fernando Herrera  <fherrera@onirica.com>

	* nautilus-file-management-properties.desktop.in: add 
	X-GNOME-Bugzilla-* stuff.

2004-01-16  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c (queue_pending_files):
	Prepend instead of append. This is faster.
	Patch from Soeren Sandmann <sandmann@daimi.au.dk>

2004-01-15  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-window-menus.c (help_menu_nautilus_manual_callback):
	Open toplevel help with F1 on desktop.
	Patch from balamurali.viswanathan@wipro.com (bug #126882)

2004-01-15  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-utilities.c (nautilus_unique_temporary_file_name):
	Use mkstemp, as its safer. From bug #130091.

2004-01-14  Dave Camp  <dave@ximian.com>
