@@ -1,3 +1,13 @@
+2004-01-22  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c:
+	Return NULL for new uri on failure.
+
+	* src/file-manager/fm-directory-view.c: (new_folder_done):
+	Handle failure
+	(real_update_menus):
+	Desensitive template menu if we can't create files.
+
 2004-01-21  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-factory.c (nautilus_icon_factory_get_icon_for_file):
